--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
 <body>
   <h1>
-    Welcome to the Jungle!
+    Welcome to the Jungle!!
   </h1>
   <p>
     "Welcome to the Jungle" is a song by American rock band Guns N' Roses, featured on their debut album, Appetite for Destruction
