--- a/app/views/announcements/show.html.erb
+++ b/app/views/announcements/show.html.erb
@@ -13,3 +13,6 @@
 </p>
 
 <%= button_to "Create Another Annoucement", new_announcement_path, :method => :get %>
+<p>
+<%= button_to "Show all announcements", announcements_path, :method => :get %>
+</p>
