--- a/app/views/announcements/new.html.erb
+++ b/app/views/announcements/new.html.erb
@@ -26,3 +26,7 @@
     <%= f.submit %>
   </p>
 <% end %>
+
+<p>
+<%= button_to "Show all announcements", announcements_path, :method => :get %>
+</p>
