--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/messages' %>
     <%= yield %>
-    <% flash.each do |name, msg| %>
-      <ul>
-        <li><%= msg %></li>
-      </ul>
-    <% end %>
   </body>
 </html>
