--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,4 +22,4 @@
   </ul>
 </body>
 
-<%= link_to 'About', about_path %>
+<%= link_to 'About', about_path %> | <%= link_to 'Announcements', announcements_path %>
